maj package.json pour prod

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "exercice-secu",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts --legacy-watch",
+    "start": "npx tsc && node dist/index.js",
+    "dev": "nodemon src/index.ts --legacy-watch",
+    "dockerStart": "docker-compose up --build",
+    "debug": "npx nodemon --legacy-watch --ext ts src --exec 'node --inspect=0.0.0.0:9229 -r ts-node/register --nolazy' src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Victor Dauphin",
